# finansi

./: .env.example  .gitignore  README.md  docker-compose.yaml  drizzle.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: python-test.yml
backend/: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt  server.py
backend/agent/: agent.py  prompt.py  tools.py
backend/app/: api.py
backend/financial_agent/: agent.py  prompt.py  tools.py
backend/src/database/: models.py  seed.py
backend/src/routes/: agent.py  transaction.py
backend/tests/: conftest.py  test_transaction.py
drizzle/: 0000_nervous_daredevil.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/drizzle/: 0000_living_nico_minoru.sql
frontend/drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/src/app/: actions.ts  layout.tsx  page.tsx
frontend/src/app/add-transaction/: page.tsx
frontend/src/components/: add-transaction.tsx  app-sidebar.tsx  cards.tsx  chat-history-cards.tsx  dashboard-layout.tsx  overview.tsx  sidebar-layout.tsx  sidebar.tsx  table-transaction.tsx  tabs-analytics.tsx
frontend/src/db/: schema.ts  seed.ts
frontend/src/lib/: actions.ts  utils.ts
frontend/src/schema/: schema.ts
init-scripts/: 01-create-transaction-schema.sql
src/app/: actions.ts  layout.tsx  page.tsx
src/components/: add-transaction.tsx  dashboard-layout.tsx  overview.tsx  transaction-history.tsx
src/db/: schema.ts  seed.ts
src/db/migrations/: 0000_glorious_rattler.sql  0001_tidy_exodus.sql
(+11 files in other folders)
